# nfe-sender-django

./: .gitignore  Makefile  pyproject.toml
nfe_sender/apps/NFe/: apps.py  serializers.py  urls.py  views.py
nfe_sender/apps/company/: admin.py  apps.py  choices.py  managers.py  models.py  serializers.py  urls.py  views.py
nfe_sender/apps/company/migrations/: 0001_initial.py  0002_alter_user_username.py  0002_rename_email_customuser_username.py  0003_alter_user_email.py  0003_auto_20210729_2055.py  0004_alter_user_email.py
nfe_sender/apps/nfe/: apps.py
nfe_sender/apps/services/: serializers.py  urls.py  views.py
nfe_sender/apps/stats/: urls.py  views.py
nfe_sender/nfe_sender/: asgi.py  settings.py  urls.py  wsgi.py
nfe_sender/tests/: cert.txt  nfe_signed.xml  test_core.py  test_xml_parser.py
nfe_sender/utils/nfe_back/: .gitignore  certificate.py  communication.py  sefaz_response.py  signer.py
src/: manage.py
src/apps/NFe/: serializers.py  views.py
src/apps/company/: admin.py  choices.py  forms.py  serializers.py  urls.py  views.py
src/apps/services/: serializers.py  urls.py  views.py
src/core/: asgi.py  settings.py  urls.py  wsgi.py
src/nfe_sender/: settings.py
src/tests/: dev.xml  test_xml_parser.py
